# CrewForge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  verify_changes.py
crewforge/: __init__.py  cli.py
crewforge/config/: __init__.py  llm.py  settings.py
crewforge/core/: __init__.py  crew.py  manager.py
crewforge/core/agents/: __init__.py  architect.py  base.py  developer.py  devops.py  reviewer.py  tester.py
crewforge/storage/: __init__.py  database.py  models.py
crewforge/tools/: __init__.py  browser.py  filesystem.py  git.py  openspec.py  search.py  shell.py
tests/: __init__.py  test_tools.py
