[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crewforge"
version = "0.1.0"
description = "Multi-agent software development framework based on CrewAI"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "CrewForge Team" }
]
keywords = ["ai", "agents", "crewai", "code-generation", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "crewai>=0.86.0",
    "crewai-tools>=0.17.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "playwright>=1.40.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
crewforge = "crewforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["crewforge"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
